[gd_scene load_steps=2 format=3 uid="uid://beyb2yf7ox5ta"]

[ext_resource type="Script" path="res://Screens/UserControlInterface.gd" id="1_krcnc"]

[node name="UserControlInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_krcnc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2

[node name="Tracking" type="Button" parent="VBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "Tracker"

[node name="Model" type="Button" parent="VBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "Model"

[node name="Environment" type="Button" parent="VBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "Environment"

[node name="KeyBinds" type="Button" parent="VBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "KeyBinds"

[connection signal="toggled" from="VBoxContainer/Tracking" to="." method="_on_tracking_toggled"]
[connection signal="toggled" from="VBoxContainer/Model" to="." method="_on_model_toggled"]
[connection signal="toggled" from="VBoxContainer/Environment" to="." method="_on_environment_toggled"]
[connection signal="toggled" from="VBoxContainer/KeyBinds" to="." method="_on_key_binds_toggled"]
